// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Project Health Page Waterfall Absolute 1`] = `
<div
  className="css-11f0p6-ProjectHealthWrapper ech0nhv2"
>
  <div
    className="css-m3r1dt-FlexRowContainer ech0nhv3"
  >
    <div
      className="css-b7olip-ColumnContainer ech0nhv1"
    >
      <div
        className="css-8ouqbx-ChartContainer e1tzsy281"
      >
        <div
          className="css-v1lxwz-Bar e1tzsy280"
          color="#E6CCE6"
          height="58.333333333333336%"
        />
        <div
          className="css-13j4x8c-Bar e1tzsy280"
          color="#F3EDF5"
          height="41.66666666666667%"
        />
        <div
          className="css-jnxlqf-Bar e1tzsy280"
          color="#5D6C74"
          height="16.666666666666664%"
        />
      </div>
      <div
        className="css-1vpg9zc-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          987bf
           
          7/16/21 3:53 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Jonathan Brill
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          EVG-14901 add ssh key to EditSpawnHostModal (#805)
        </small>
      </div>
      <div
        className="css-73nv4h-ColumnContainer ejnodhn0"
      >
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          01. Code Health [code_health]
        </small>
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          02. Packaging (RPM - RHEL7) [package_rpm]
        </small>
      </div>
    </div>
    <div
      className="css-b7olip-ColumnContainer ech0nhv1"
    >
      <div
        className="css-8ouqbx-ChartContainer e1tzsy281"
      >
        <div
          className="css-u2pqa3-Bar e1tzsy280"
          color="#CF4A22"
          height="50%"
        />
        <div
          className="css-1cmd6j4-Bar e1tzsy280"
          color="#E6CCE6"
          height="50%"
        />
        <div
          className="css-122yz11-Bar e1tzsy280"
          color="#FFDD49"
          height="16.666666666666664%"
        />
        <div
          className="css-1n3fse1-Bar e1tzsy280"
          color="#5D6C74"
          height="100%"
        />
      </div>
      <div
        className="css-1vpg9zc-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          a77bd
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Mohamed Khelif
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Triggered From Git Tag 'v2.11.1': v2.11.1
        </small>
      </div>
      <div
        className="css-73nv4h-ColumnContainer ejnodhn0"
      >
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          01. Code Health [code_health]
        </small>
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          02. Packaging (RPM - RHEL7) [package_rpm]
        </small>
      </div>
    </div>
    <div
      className="css-b7olip-ColumnContainer ech0nhv1"
    >
      <div
        className="css-mh33b0-InactiveCommitLine ezzuvrx3"
      />
      <div
        className="leafygreen-ui-cssveg css-ue3t3g-ButtonContainer ezzuvrx4"
        onClick={[Function]}
      >
        <small
          className="css-nr1a01-ButtonText ezzuvrx1 leafygreen-ui-18tqmm7"
          data-cy="inactive-commits-button"
        >
          <div
            className="css-hifh5j-TopText ezzuvrx2"
          >
            1
             
          </div>
          inactive
        </small>
      </div>
    </div>
    <div
      className="css-b7olip-ColumnContainer ech0nhv1"
    >
      <div
        className="css-8ouqbx-ChartContainer e1tzsy281"
      >
        <div
          className="css-10p0w0w-Bar e1tzsy280"
          color="#B8C4C2"
          height="41.66666666666667%"
        />
        <div
          className="css-257iew-Bar e1tzsy280"
          color="#F3EDF5"
          height="33.33333333333333%"
        />
        <div
          className="css-7xv9na-Bar e1tzsy280"
          color="#FFDD49"
          height="41.66666666666667%"
        />
      </div>
      <div
        className="css-1vpg9zc-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          9c1d1
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Mohamed Khelif
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          EVG-14799 Correctly visit configure page when no tab indicated (#810)
        </small>
      </div>
      <div
        className="css-73nv4h-ColumnContainer ejnodhn0"
      >
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          01. Code Health [code_health]
        </small>
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          02. Packaging (RPM - RHEL7) [package_rpm]
        </small>
      </div>
    </div>
    <div
      className="css-b7olip-ColumnContainer ech0nhv1"
    >
      <div
        className="css-8ouqbx-ChartContainer e1tzsy281"
      >
        <div
          className="css-14yldmu-Bar e1tzsy280"
          color="#CF4A22"
          height="16.666666666666664%"
        />
        <div
          className="css-14bpbph-Bar e1tzsy280"
          color="#B8C4C2"
          height="66.66666666666666%"
        />
        <div
          className="css-13z1it4-Bar e1tzsy280"
          color="#5D6C74"
          height="33.33333333333333%"
        />
      </div>
      <div
        className="css-1vpg9zc-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          f7f7f
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Sophie Stadler
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Remove navigation announcement toast (#808)
        </small>
      </div>
      <div
        className="css-73nv4h-ColumnContainer ejnodhn0"
      >
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          01. Code Health [code_health]
        </small>
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          02. Packaging (RPM - RHEL7) [package_rpm]
        </small>
      </div>
    </div>
    <div
      className="css-b7olip-ColumnContainer ech0nhv1"
    >
      <div
        className="css-8ouqbx-ChartContainer e1tzsy281"
      >
        <div
          className="css-1pmbxjd-Bar e1tzsy280"
          color="#13AA52"
          height="50%"
        />
        <div
          className="css-14yldmu-Bar e1tzsy280"
          color="#CF4A22"
          height="16.666666666666664%"
        />
        <div
          className="css-s0dnis-Bar e1tzsy280"
          color="#B8C4C2"
          height="50%"
        />
        <div
          className="css-7xv9na-Bar e1tzsy280"
          color="#FFDD49"
          height="41.66666666666667%"
        />
      </div>
      <div
        className="css-1vpg9zc-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          211b3
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Chaya Malik
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Triggered From Git Tag 'v2.11.0': v2.11.0
        </small>
      </div>
      <div
        className="css-73nv4h-ColumnContainer ejnodhn0"
      >
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          01. Code Health [code_health]
        </small>
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          02. Packaging (RPM - RHEL7) [package_rpm]
        </small>
      </div>
    </div>
  </div>
  <div
    className="css-1dysym0-ColumnContainer e15dc98b2"
  >
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-1sahvn-SolidLine e15dc98b0"
    />
  </div>
</div>
`;

exports[`Storyshots Project Health Page Waterfall Percentage 1`] = `
<div
  className="css-11f0p6-ProjectHealthWrapper ech0nhv2"
>
  <div
    className="css-m3r1dt-FlexRowContainer ech0nhv3"
  >
    <div
      className="css-b7olip-ColumnContainer ech0nhv1"
    >
      <div
        className="css-8ouqbx-ChartContainer e1tzsy281"
      >
        <div
          className="css-1cmd6j4-Bar e1tzsy280"
          color="#E6CCE6"
          height="50%"
        />
        <div
          className="css-bz3jal-Bar e1tzsy280"
          color="#F3EDF5"
          height="35.714285714285715%"
        />
        <div
          className="css-26ylbp-Bar e1tzsy280"
          color="#5D6C74"
          height="14.285714285714285%"
        />
      </div>
      <div
        className="css-1vpg9zc-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          987bf
           
          7/16/21 3:53 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Jonathan Brill
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          EVG-14901 add ssh key to EditSpawnHostModal (#805)
        </small>
      </div>
      <div
        className="css-73nv4h-ColumnContainer ejnodhn0"
      >
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          01. Code Health [code_health]
        </small>
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          02. Packaging (RPM - RHEL7) [package_rpm]
        </small>
      </div>
    </div>
    <div
      className="css-b7olip-ColumnContainer ech0nhv1"
    >
      <div
        className="css-8ouqbx-ChartContainer e1tzsy281"
      >
        <div
          className="css-165em9x-Bar e1tzsy280"
          color="#CF4A22"
          height="23.076923076923077%"
        />
        <div
          className="css-1jquta0-Bar e1tzsy280"
          color="#E6CCE6"
          height="23.076923076923077%"
        />
        <div
          className="css-zhivm2-Bar e1tzsy280"
          color="#FFDD49"
          height="7.6923076923076925%"
        />
        <div
          className="css-xaha9l-Bar e1tzsy280"
          color="#5D6C74"
          height="46.15384615384615%"
        />
      </div>
      <div
        className="css-1vpg9zc-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          a77bd
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Mohamed Khelif
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Triggered From Git Tag 'v2.11.1': v2.11.1
        </small>
      </div>
      <div
        className="css-73nv4h-ColumnContainer ejnodhn0"
      >
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          01. Code Health [code_health]
        </small>
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          02. Packaging (RPM - RHEL7) [package_rpm]
        </small>
      </div>
    </div>
    <div
      className="css-b7olip-ColumnContainer ech0nhv1"
    >
      <div
        className="css-mh33b0-InactiveCommitLine ezzuvrx3"
      />
      <div
        className="leafygreen-ui-cssveg css-ue3t3g-ButtonContainer ezzuvrx4"
        onClick={[Function]}
      >
        <small
          className="css-nr1a01-ButtonText ezzuvrx1 leafygreen-ui-18tqmm7"
          data-cy="inactive-commits-button"
        >
          <div
            className="css-hifh5j-TopText ezzuvrx2"
          >
            1
             
          </div>
          inactive
        </small>
      </div>
    </div>
    <div
      className="css-b7olip-ColumnContainer ech0nhv1"
    >
      <div
        className="css-8ouqbx-ChartContainer e1tzsy281"
      >
        <div
          className="css-xz36b2-Bar e1tzsy280"
          color="#B8C4C2"
          height="35.714285714285715%"
        />
        <div
          className="css-w5yj4a-Bar e1tzsy280"
          color="#F3EDF5"
          height="28.57142857142857%"
        />
        <div
          className="css-9n9g83-Bar e1tzsy280"
          color="#FFDD49"
          height="35.714285714285715%"
        />
      </div>
      <div
        className="css-1vpg9zc-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          9c1d1
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Mohamed Khelif
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          EVG-14799 Correctly visit configure page when no tab indicated (#810)
        </small>
      </div>
      <div
        className="css-73nv4h-ColumnContainer ejnodhn0"
      >
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          01. Code Health [code_health]
        </small>
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          02. Packaging (RPM - RHEL7) [package_rpm]
        </small>
      </div>
    </div>
    <div
      className="css-b7olip-ColumnContainer ech0nhv1"
    >
      <div
        className="css-8ouqbx-ChartContainer e1tzsy281"
      >
        <div
          className="css-1kkzxru-Bar e1tzsy280"
          color="#CF4A22"
          height="14.285714285714285%"
        />
        <div
          className="css-eq6z3q-Bar e1tzsy280"
          color="#B8C4C2"
          height="57.14285714285714%"
        />
        <div
          className="css-2h1w5q-Bar e1tzsy280"
          color="#5D6C74"
          height="28.57142857142857%"
        />
      </div>
      <div
        className="css-1vpg9zc-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          f7f7f
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Sophie Stadler
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Remove navigation announcement toast (#808)
        </small>
      </div>
      <div
        className="css-73nv4h-ColumnContainer ejnodhn0"
      >
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          01. Code Health [code_health]
        </small>
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          02. Packaging (RPM - RHEL7) [package_rpm]
        </small>
      </div>
    </div>
    <div
      className="css-b7olip-ColumnContainer ech0nhv1"
    >
      <div
        className="css-8ouqbx-ChartContainer e1tzsy281"
      >
        <div
          className="css-1uvqmvu-Bar e1tzsy280"
          color="#13AA52"
          height="31.57894736842105%"
        />
        <div
          className="css-1dk33oz-Bar e1tzsy280"
          color="#CF4A22"
          height="10.526315789473683%"
        />
        <div
          className="css-1lwtlhk-Bar e1tzsy280"
          color="#B8C4C2"
          height="31.57894736842105%"
        />
        <div
          className="css-1tu88c-Bar e1tzsy280"
          color="#FFDD49"
          height="26.31578947368421%"
        />
      </div>
      <div
        className="css-1vpg9zc-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          211b3
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Chaya Malik
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Triggered From Git Tag 'v2.11.0': v2.11.0
        </small>
      </div>
      <div
        className="css-73nv4h-ColumnContainer ejnodhn0"
      >
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          01. Code Health [code_health]
        </small>
        <small
          className="css-1wdo5ex-AccordionContainer ejnodhn1 leafygreen-ui-18tqmm7"
        >
          02. Packaging (RPM - RHEL7) [package_rpm]
        </small>
      </div>
    </div>
  </div>
  <div
    className="css-1dysym0-ColumnContainer e15dc98b2"
  >
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-1sahvn-SolidLine e15dc98b0"
    />
  </div>
</div>
`;
